added bridal page

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,13 +8,23 @@
     box-sizing: border-box;
 }
 
-html {
+html,
+body {
     background-color: #fff;
     color: #555;
     font-family: 'Lato', 'Arial', sans-serif;
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
+}
+
+.clearfix {zoom: 1;}
+.clearfix:after {
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
 }
 
 /* ----------------------*/
@@ -24,6 +34,20 @@ html {
 .row{
     max-width: 1140px;
     margin: 0 auto;
+}
+
+section {
+    padding: 40px 0;
+}
+
+h1:after {
+    display: block;
+    height: 4px;
+    background-color: #f4ada6;
+    content: " ";
+    width: 400px;
+    margin: 0 auto;
+    margin-top: 15px;
 }
 
 /* -------HEADINGS------- */
@@ -36,16 +60,16 @@ html {
 /* ----------------------*/
 
 header {
-    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/main.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(img/main.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
+    background-attachment: fixed;
 }
 
 .main-text-box {
     font-family: 'Lato', 'Arial', sans-serif;
     position: absolute;
-    width: 1140px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -86,7 +110,8 @@ header {
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 80%;
+    font-size: 70%;
+    letter-spacing: 2px;
     border-bottom: 2px solid transparent;
     transition: border-bottom 0.2s;
 }
@@ -94,7 +119,7 @@ header {
 .main-nav li a:hover,
 .main-nav li a:active {
     border-bottom: 4px solid #f4ada6;
-    font-size: 100%;
+    font-size: 105%;
 }
 
 
@@ -108,13 +133,136 @@ h1 {
     text-align: center;
 }
 
+.main-text-box h1:after {
+    display: none;
+}
+
 h2 {
-    font-size: 100%;
+    font-size: 150%;
     font-family: 'Lato';
-    font-weight: 200;
-    color: #cbcaca;
+    color: #355E3B;
     text-align: center;
     text-transform: lowercase;
-    letter-spacing: 2px;
-    
+    letter-spacing: 3px;
+}
+
+/* ----------------------*/
+/* OUR STORY */
+/* ----------------------*/
+
+.our-story {
+    background-image: url(img/hunter-min3.jpeg);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.outer-box {
+    background-color: rgba(209, 194, 194, 0.44);
+    width: 70%;
+    margin-left: 15%;
+    padding-top: .1px;
+    padding-bottom: 35px;
+    border-radius: 2px;
+}
+
+.story-box {
+    background-color: rgba(255, 255, 255, 0.89);
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 5%;
+    text-align: justify;
+    border-radius: 2px;
+}
+
+.story-box h1 {
+    color: #4a4a4a;
+    padding: 15px;
+}
+
+/*
+.story-box h1:after {
+    display: block;
+    height: 4px;
+    background-color: #f4ada6;
+    content: " ";
+    width: 400px;
+    margin: 0 auto;
+    margin-top: 15px;
+}
+*/
+
+.story-box p {
+    color: black;
+    word-spacing: 3px;
+    margin-top: 0;
+    padding: 25px;
+    padding-top: 0;
+    font-size: 85%;
+}
+
+/* ----------------------*/
+/* BRIDAL PARTY */
+/* ----------------------*/
+
+.bridal-party {
+    background-color: #f4f4f4;
+}
+
+.bridal-party h1 {
+    color: #4a4a4a;
+}
+
+/*
+.bridal-party h1:after {
+    display: block;
+    height: 4px;
+    background-color: #f4ada6;
+    content: " ";
+    width: 400px;
+    margin: 0 auto;
+    margin-top: 15px;
+}
+*/
+
+.bridal-blurb img {
+    padding: 8px;
+    border-radius: 50%;
+    opacity: 0.9;
+    width: 30%;
+    position: center;
+    float: left;
+}
+
+
+.bridal-blurb img:hover {
+    opacity: 1;
+    transform: scale(1.15);
+}
+
+.blurb {
+    display: block;
+    font-size: 75%;
+    box-shadow: 5px 5px 27px 1px #b1b0b0;
+    padding: 20px;
+    background-color: white;
+    margin-bottom: 20px;
+}
+
+.blurb h3 {
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.blurb p {
+    padding-left: 160px;
+}
+
+.festivities {
+    background-image:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(img/chandelier.jpeg);
+    color: #fff;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    padding-top: 2px;
+    background-attachment: fixed
 }
