--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,6 +16,7 @@ body {
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
+    overflow-x: hidden;
 }
 
 .clearfix {zoom: 1;}
@@ -50,10 +51,6 @@ h1:after {
     margin-top: 15px;
 }
 
-/* -------HEADINGS------- */
-
-
-
 
 /* ----------------------*/
 /* HEADER */
@@ -68,11 +65,15 @@ header {
 }
 
 .main-text-box {
-    font-family: 'Lato', 'Arial', sans-serif;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.main-text-box h1 {
+    font-family: 'Lato', 'Arial', sans-serif;
+    color:#dbd9d9;
 }
 
 .home {
@@ -107,7 +108,7 @@ header {
 .main-nav li a:link,
 .main-nav li a:visited {
     padding: 8px 0;
-    color: #fff;
+    color:#dbd9d9;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 70%;
@@ -126,11 +127,11 @@ header {
 h1 {
     font-size: 220%;
     text-transform: uppercase;
-    font-family: 'Lato';
     font-weight: 200;
     letter-spacing: 3px;
     color: #cbcaca;
     text-align: center;
+    color: #555;
 }
 
 .main-text-box h1:after {
@@ -139,11 +140,22 @@ h1 {
 
 h2 {
     font-size: 150%;
-    font-family: 'Lato';
     color: #355E3B;
     text-align: center;
     text-transform: lowercase;
     letter-spacing: 3px;
+}
+
+/* ----------------------*/
+/* OUR STORY */
+/* ----------------------*/
+
+.gallery {
+    background-color: #f4f4f4;
+}
+
+.gallery p {
+    text-align: center;
 }
 
 /* ----------------------*/
@@ -175,7 +187,6 @@ h2 {
 }
 
 .story-box h1 {
-    color: #4a4a4a;
     padding: 15px;
 }
 
@@ -206,10 +217,6 @@ h2 {
 
 .bridal-party {
     background-color: #f4f4f4;
-}
-
-.bridal-party h1 {
-    color: #4a4a4a;
 }
 
 /*
@@ -249,12 +256,17 @@ h2 {
 }
 
 .blurb h3 {
+    text-transform: uppercase;
+    font-size: 110%;
     text-align: center;
+    word-spacing: 2px;
     padding-bottom: 10px;
+    color: #355E3B;
 }
 
 .blurb p {
     padding-left: 160px;
+    color: #4a4a4a;
 }
 
 .festivities {
