added animation to story and bridal party

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -134,7 +134,7 @@ header {
     background-color: rgba(255, 255, 255, 0.98);
     box-shadow: 0 2px 2px #efefef;
     z-index: 9999;
-    opacity: 0.8;
+    opacity: 0.85;
 }
 
 .sticky .main-nav { 
@@ -153,7 +153,7 @@ header {
 
 h1 {
     font-family: 'Italianno', cursive;
-    font-size: 260%;
+    font-size: 280%;
     font-weight: 200;
     letter-spacing: 3px;
     text-align: center;
@@ -191,6 +191,7 @@ h2 {
 .our-story {
     background-image: url(img/hunter-min3.jpeg);
     background-size: cover;
+    height: 110vh;
     background-attachment: fixed;
 }
 
@@ -303,4 +304,19 @@ h2 {
     height: 100vh;
     padding-top: 2px;
     background-attachment: fixed
+}
+
+/* ----------------------*/
+/* ANIMATIONS */
+/* ----------------------*/
+
+.js--wp-1,
+.js--wp-2 {
+    opacity: 0;
+    animation-duration: 1s;
+}
+
+.js--wp-1.animated,
+.js--wp-2.animated {
+    opacity: 1;
 }
