--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -41,6 +41,8 @@ section {
     padding: 30px 0;
 }
 
+/* ------HEADINGS------*/
+
 h1:after {
     display: block;
     height: 4px;
@@ -51,6 +53,20 @@ h1:after {
     margin-top: 15px;
 }
 
+h1 {
+    font-size: 220%;
+    font-weight: 200;
+    text-align: center;
+    color: #555;
+    text-transform: uppercase;
+}
+
+h2 {
+    font-size: 150%;
+    color:#a8a8a8;
+    text-align: center;
+    letter-spacing: 3px;
+}
 
 /* ----------------------*/
 /* HEADER */
@@ -66,17 +82,42 @@ header {
 
 .main-text-box {
     position: absolute;
-    top: 50%;
+    top: 62%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
+
 .main-text-box h1 {
-    font-family: 'Lato', 'Arial', sans-serif;
-    text-transform: uppercase;
-    color:#dbd9d9;
+    font-family: 'Coda Caption', sans-serif;
+    color:#cecece;
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 240%;
+    font-weight: 300;
+    line-height: 50px;
 }
 
+.main-text-box span {
+    font-family: 'Lato','Arial', sans-serif;;
+    font-weight: 100;
+    font-size: 60%;
+    text-transform: lowercase;
+}
+
+.main-text-box h1:after {
+    display: none;
+}
+
+.main-text-box img {
+    width: 100%;
+}
+
+/* ----------------------*/
+/* NAVIGATION */
+/* ----------------------*/
+
+/*
 .home {
     padding: 8px 0;
     float: left;
@@ -93,17 +134,17 @@ header {
 .home:active {
     font-weight: 400;
 }
-
+*/
 
 .main-nav {
-    float: right;
-    list-style: none;
+    text-align: center;
     margin-top: 30px;
 }
 
 .main-nav li {
     display: inline-block;
-    margin-left: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .main-nav li a:link,
@@ -126,23 +167,35 @@ header {
 
 /* STICKY NAVIGATION */
 
+.home {
+    display: none;
+    height: 35px;
+    width: 1px;
+    float: left;
+    margin-top: 20px;
+    margin-bottom: 16px;
+}
+
 .sticky {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.98);
+    background-color: #fff;
     box-shadow: 0 2px 2px #efefef;
     z-index: 9999;
-    opacity: 0.85;
+    opacity: .8;
 }
 
 .sticky .main-nav { 
     margin-top: 18px;
+    float: right;
 }
 
 .sticky .home {
     margin-top: 10px;
+    display: block;
+    width: 220px;
 }
 
 .sticky .main-nav li a:link,
@@ -151,29 +204,9 @@ header {
     color: #555;
 }
 
-h1 {
-    font-family: 'Italianno', cursive;
-    font-size: 280%;
-    font-weight: 200;
-    letter-spacing: 3px;
-    text-align: center;
-    color: #555;
-}
-
-.main-text-box h1:after {
-    display: none;
-}
-
-h2 {
-    font-size: 150%;
-    color: #355E3B;
-    text-align: center;
-    text-transform: lowercase;
-    letter-spacing: 3px;
-}
 
 /* ----------------------*/
-/* OUR STORY */
+/* GALLERY */
 /* ----------------------*/
 
 .gallery {
@@ -191,7 +224,6 @@ h2 {
 .our-story {
     background-image: url(img/hunter-min3.jpeg);
     background-size: cover;
-    height: 110vh;
     background-attachment: fixed;
 }
 
@@ -283,18 +315,26 @@ h2 {
 }
 
 .blurb h3 {
-    text-transform: uppercase;
-    font-size: 110%;
+    font-size: 130%;
     text-align: center;
-    word-spacing: 2px;
-    padding-bottom: 10px;
     color: #355E3B;
+    text-transform: lowercase;
+}
+
+.blurb span {
+    font-family: 'Arizonia', cursive;
+    font-size: 150%;
+    text-transform: capitalize;
 }
 
 .blurb p {
     padding-left: 160px;
     color: #4a4a4a;
 }
+
+/* ----------------------*/
+/* WEDDING DETAILS */
+/* ----------------------*/
 
 .details {
     background-image:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(img/chandelier.jpeg);
