--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,7 +10,6 @@
 
 html,
 body {
-    background-color: #fff;
     color: #555;
     font-family: 'Lato', 'Arial', sans-serif;
     font-weight: 300;
@@ -47,8 +46,8 @@ h1:after {
     display: block;
     height: 4px;
     background-color: #f4ada6;
-    content: " ";
-    width: 400px;
+    content: "";
+    width: 125px;
     margin: 0 auto;
     margin-top: 15px;
 }
@@ -87,7 +86,6 @@ header {
     transform: translate(-50%, -50%);
 }
 
-
 .main-text-box h1 {
     font-family: 'Coda Caption', sans-serif;
     color:#cecece;
@@ -106,7 +104,7 @@ header {
 }
 
 .main-text-box h1:after {
-    display: none;
+    background-color: #355E3B;
 }
 
 .main-text-box img {
@@ -149,7 +147,7 @@ header {
 
 .main-nav li a:link,
 .main-nav li a:visited {
-    padding: 8px 0;
+    padding: 1px 0;
     color:#dbd9d9;
     text-decoration: none;
     text-transform: uppercase;
@@ -161,7 +159,7 @@ header {
 
 .main-nav li a:hover,
 .main-nav li a:active {
-    border-bottom: 4px solid #f4ada6;
+    border-bottom: 2px solid #f4ada6;
     font-size: 80%;
 }
 
@@ -187,6 +185,11 @@ header {
     opacity: .8;
 }
 
+.sticky:hover,
+.sticky:active {
+    opacity: .95;
+}
+
 .sticky .main-nav { 
     margin-top: 18px;
     float: right;
@@ -200,7 +203,7 @@ header {
 
 .sticky .main-nav li a:link,
 .sticky .main-nav li a:visited {
-    padding: 16px 0;
+    padding: 1px 0;
     color: #555;
 }
 
@@ -302,7 +305,7 @@ header {
 
 .bridal-blurb img:hover {
     opacity: 1;
-    transform: scale(1.15);
+    transform: scale(1.1);
 }
 
 .blurb {
@@ -328,8 +331,9 @@ header {
 }
 
 .blurb p {
-    padding-left: 160px;
+    padding-left: 150px;
     color: #4a4a4a;
+    text-align: justify;
 }
 
 /* ----------------------*/
@@ -346,6 +350,15 @@ header {
     background-attachment: fixed
 }
 
+/* ----------------------*/
+/* MINNEAPOLIS */
+/* ----------------------*/
+
+
+/* ----------------------*/
+/* FOOTER */
+/* ----------------------*/
+
 footer {
     background-color: #cecece;
     padding: 20px;
@@ -358,6 +371,7 @@ footer h6 {
     text-transform: uppercase;
     letter-spacing: 1px;
 }
+
 /* ----------------------*/
 /* ANIMATIONS */
 /* ----------------------*/
