--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -317,6 +317,7 @@ header {
     width: 612px;
     height: 612px;
     border-radius: 50%;
+    margin: 5px;
     -webkit-box-shadow: inset 2px 3px 49px -17px rgba(53,94,59,1);
     box-shadow: inset 2px 3px 49px -17px rgba(53,94,59,1);
 }
@@ -335,6 +336,7 @@ header {
     padding: 25px;
     padding-top: 0;
     font-size: 80%;
+    display: block;
 }
 
 .info-box a:link,
